--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -7,7 +7,7 @@ Such AI systems are trained to optimise a specific target function, such as pred
 Therefore, such systems rely on statistical patterns rather than genuine understanding and still lack cognitive capabilities, reasoning ability, self-awareness, and intentionality \sidecite{rosenbloom_defining_2023, mitchell_debate_2023}.
 Furthermore, deep networks suffer from various issues of statistical learning, such as missing robustness \sidecite{akhtar_threat_2018, long_survey_2022}, catastrophic forgetting \sidecite{kirkpatrick_overcoming_2017}, or requiring vast amounts of data \sidecite{smith_using_2022} (c.f. \secref{limitationsDL}).
 
-Geoffrey Hinton, recipient of the Turing Award\sidenote{The Turing Award is recognised as the highest academic award in computer science and sometimes also called the ``Nobel Prize of Computing''.} and a prominent figure in the field, is considered one of the pioneers of deep learning.
+Geoffrey E. Hinton, recipient of the Turing Award\sidenote{The Turing Award is recognised as the highest academic award in computer science and sometimes also called the ``Nobel Prize of Computing''.} and a prominent figure in the field, is considered one of the pioneers of deep learning.
 His remarkable contributions, including developing deep learning's error correction algorithm called ``backpropagation of error'' (c.f. \secref{ann}), have laid the foundation for today's deep learning systems.
 After working over three decades in the field, Hinton expresses deep scepticism about end-to-end backpropagation of errors and even suggests to ``throw it all away and start again'' to improve current systems fundamentally \sidecite{axios_media_inc_artificial_2017}.
 While this view may seem extreme, it shows that the learning algorithm of such systems has significant shortcomings.
@@ -71,3 +71,4 @@ The remainder of the thesis is organised as follows: In \chref{fundamentals}, de
 Afterwards, \chref{probabilistic_framework} proposes a novel implementation of the identified biological concepts within a computational framework based on a new neuron called the Bernoulli neuron.
 In \chref{experiments}, conducted experiments with the novel framework are described and in \chref{results} the obtained results.
 Finally, \chref{future_work} concludes the thesis by discussing the advantages and disadvantages of the proposed learning framework and suggests potential directions for future research.
+Thus, the first Chapters \chref*{fundamentals}-\chref*{biological_inspiration} survey existing work and put it into context, while the Chapters \chref*{probabilistic_framework}-\chref*{future_work} introduce a novel vision framework.
