--- a/tex/math.tex
+++ b/tex/math.tex
@@ -20,7 +20,7 @@ Depending on the context, a variable can be a scalar value, a vector, or a matri
 	\hline
 	$\eta$ & The learning rate of an optimisation algorithm.\\
 	$\boldsymbol{a} = (a_1, ..., a_k)$ & The output of an intermediate layer of a multi-layer network with $k$ neurons, the output of the last layer is typically denoted as $\boldsymbol{\hat{y}}$. $a_i$ is the output of an activation function of a single neuron.\\
-	$\boldsymbol{b} = (b_1, ..., b_k)$ & The bias of a network layer with $k$ neurons. $b_i$ & is the bias of a single neuron.\\
+	$\boldsymbol{b} = (b_1, ..., b_k)$ & The bias of a network layer with $k$ neurons. $b_i$ is the bias of a single neuron.\\
     $k$ & The number of neurons within a layer.\\
     $L$ & The number of layers of a network.\\
     $n$ & The length (size) of a vector, for example, an input of length $n$ is defined as $\boldsymbol{x} = (x_1, ..., x_n)$.\\
