--- a/tex/related_work.tex
+++ b/tex/related_work.tex
@@ -4,7 +4,7 @@ This theory can be implemented by combining projection fibres with lateral conne
 
 
 \section{Alternative Learning Approaches}\seclbl{alternative_approaches}
-Arguably, the only existing systems that, in non-experts' eyes, behave intelligently\sidenote{Which does not mean that such systems exhibit actual intelligence.} are foundation models such as large language models (LLMs) \sidecite{brown_language_2020, touvron_llama_2023}, and their fine-tuned versions \sidecite{ouyang_training_2022}. However, like other deep learning models, also foundation models suffer from the typical drawbacks of statistical learning (c.f. \secref{limitationsDL}). Therefore, a lot of research has been conducted to reduce these well-known problems: For example, current research aims to reduce hallucinations \sidecite{feldman_trapping_2023, manakul_selfcheckgpt_2023}, to implement an ongoing learning framework \cite{sahoo_online_2018, hoi_online_2021}, to transfer knowledge between tasks and data domains \cite{zhuang_comprehensive_2021, sager_unsupervised_2022}, or to learn what should be learned \cite{thrun_learning_1998, hospedales_meta-learning_2021}. However, the underlying framework remains identical: Data is statistically mapped to manually or automatically generated labels, making it difficult to solve problems such as lack of robustness,  out-of-distribution generalisation, data efficiency, causal understanding or common sense reasoning (c.f. \secref{limitationsDL}). In the following, alternative approaches to training deep networks are presented that attempt to alleviate these problems with new principles that do not rely solely on label prediction or data reconstruction. 
+Arguably, the only existing systems that, in non-experts' eyes, behave intelligently\sidenote{Which does not mean that such systems exhibit actual intelligence.} are foundation models such as large language models (LLMs) \sidecite{brown_language_2020, touvron_llama_2023}, and their fine-tuned versions \sidecite{ouyang_training_2022}. However, like other deep learning models, also foundation models suffer from the typical drawbacks of statistical learning (c.f. \secref{limitationsDL}). Therefore, a lot of research has been conducted to reduce these well-known problems: For example, current research aims to reduce hallucinations \sidecite{feldman_trapping_2023, manakul_selfcheckgpt_2023}, to implement an ongoing learning framework \cite{sahoo_online_2018, hoi_online_2021}, to transfer knowledge between tasks and data domains \cite{zhuang_comprehensive_2021, sager_unsupervised_2022}, or to learn what should be learned \cite{thrun_introduction_1998, hospedales_meta-learning_2022}. However, the underlying framework remains identical: Data is statistically mapped to manually or automatically generated labels, making it difficult to solve problems such as lack of robustness,  out-of-distribution generalisation, data efficiency, causal understanding or common sense reasoning (c.f. \secref{limitationsDL}). In the following, alternative approaches to training deep networks are presented that attempt to alleviate these problems with new principles that do not rely solely on label prediction or data reconstruction. 
 
 \paragraph{1000 Brains.} Jeff Hawking and his research group use the brain as the single source of inspiration and build, following their interpretation, a biologically highly plausible system that implements the brain's learning algorithm \sidecite{hawkins_framework_2019}. The learning algorithm is an adapted version of unsupervised Hebbian learning (c.f. \secref{hebbian}). Their theory is based on Vernon Mountcastle's proposal that the neocortex comprises many cortical columns, all having a similar architecture and performing similar functions \sidecite{mountcastle_organizing_1978, mountcastle_columnar_1997}. Thus, they argue that the brain does not comprise a single learning model like current deep learning systems but many similar but independent models for each object \cite{lewis_locations_2019}. Each model uses different inputs from different sensory system parts. These models make predictions based on the input they receive and vote to reach a consensus on the sensory observations.
 This theory is also known as the 1000 brains theory, as many models work in parallel. The principle of many parallel models is closely related to ensemble approaches in deep learning \sidecite{yang_survey_2023}, with the constraint, similar to random forest \sidecite{ho_random_1995}, that only a portion of the data is available to each model. Current results are difficult to interpret as the proposed model has been trained and tested on the same dataset. In its current form, the model can recognise several hundred objects and is robust to noise. However, the number of input signals severely limits the network's capacity, and the model cannot yet scale to recognise more objects. 
@@ -85,10 +85,10 @@ Between these two stages, projection fibres map neighbouring neurons in the firs
 
 \subsection{Projection Fibres}\seclbl{projection_fibres}
 The previous section introduces two stages, one containing image-dependent features and one containing object prototypes.
-As will be outlined in \secref{framework_neuroscience}, these stages are inspired by the human brain: The eyes activate cells in the primary visual cortex \sidecite{tong_primary_2003, grill-spector_human_2004} that represent the visually perceived scene.
+As it will be outlined in \secref{neuroscience_findings}, these stages are inspired by the human brain: The eyes activate cells in the primary visual cortex \sidecite{tong_primary_2003, grill-spector_human_2004} that represent the visually perceived scene.
 The objects within this scene are mapped to reference frames (object prototypes) that represent the same object but are independent of transformation and position.
 In the human brain, such prototypes are stored in the temporal cortex \sidecite{miyashita_inferior_1993, conway_organization_2018} and projection fibres, a type of axons, map the object in the visual cortex to reference frames in the temporal cortex in a position- and transformation-invariant manner.
-This chapter presents different implementations of projection fibres, while \secref{framework_neuroscience} discusses biological aspects in more detail. 
+This chapter presents different implementations of projection fibres, while \secref{neuroscience_findings_projection_fibres} discusses biological aspects in more detail. 
 
 Projection fibres can be interpreted as a graph combining features hierarchically, ignoring local distortions to create transformation-independent object detection.
 From a computational perspective, projection fibres can be implemented as matching labelled subgraphs \cite{bienenstock_neural_1987, lades_distortion_1993, wiskott_face_1996}.
@@ -119,7 +119,7 @@ However, the main drawback is that the cells are organised according to a face g
 Projection fibres map the features found in the image to stored object prototypes based on their local similarity. This creates an explicit one-to-one mapping between features and prototypes. Therefore, unlike CNNs, no position and transformation information is lost, and the mapping is better interpretable.
 Current implementations cannot map images to prototypes if the features do not match well.
 This problem is alleviated in this thesis by mapping so-called net fragments instead of features.
-Net fragments are consistent groups of neurons representing well-known patterns and are explained in detail in \secref{framework_neuroscience}.
+Net fragments are consistent groups of neurons representing well-known patterns and are explained in detail in \secref{neuroscience_findings_net_fragments}.
 Net fragments are based on image features but remove noise, reconstruct missing parts, and locally generalise features. Thus, net fragments transform features into suitable representations that similarly occur in reference frames, enabling a more robust mapping.
 
 \section{Self-Organisation}\seclbl{self_org_related}
