--- a/tex/results.tex
+++ b/tex/results.tex
@@ -103,7 +103,7 @@ The feedback from \emph{S2} is switched off so that only the reconstruction base
 Remarkably, the \emph{S1} consistently succeeds in reconstructing the original training input when up to $6$ pixels are removed. Furthermore, in many cases, it can reconstruct lines with up to $8$ pixels missing, although it fails with more than $8$ pixels removed.
 
 The extent to which the network can reconstruct discontinuous lines depends on the range of lateral connections $n_l$. As expected, increasing the value of $n_l$ allows \emph{S1} to reconstruct lines with more missing pixels, improving its performance in recovering objects.
-However, $n_l$ should not be too large so that \emph{S1} build net fragments based on local features (c.f. \secref{framework_neuroscience}).
+However, $n_l$ should not be too large so that \emph{S1} build net fragments based on local features (c.f. \secref{neuroscience_findings_net_fragments}).
 
 In the conducted experiments, the lateral reach is set to $n_l=11$.
 The impressive ability to reconstruct up to $8$ missing pixels with this setting suggests that recreating occluded patterns works effectively.
