--- a/zotero2.bib
+++ b/zotero2.bib
@@ -1,4 +1,101 @@
 
+@incollection{thrun_introduction_1998,
+	location = {Boston, {MA}, {USA}},
+	title = {Introduction and Overview},
+	isbn = {978-1-4615-5529-2},
+	url = {http://link.springer.com/10.1007/978-1-4615-5529-2_1},
+	shorttitle = {Learning to Learn},
+	pages = {3--17},
+	booktitle = {Learning to Learn},
+	publisher = {Springer},
+	author = {Thrun, Sebastian and Pratt, Lorien},
+	editor = {Thrun, Sebastian and Pratt, Lorien},
+	urldate = {2023-07-01},
+	date = {1998},
+	langid = {english},
+	doi = {10.1007/978-1-4615-5529-2_1},
+}
+
+@incollection{appice_difference_2015,
+	location = {Cham, Switzerland},
+	title = {Difference Target Propagation},
+	volume = {9284},
+	isbn = {978-3-319-23528-8},
+	url = {http://link.springer.com/10.1007/978-3-319-23528-8_31},
+	pages = {498--515},
+	booktitle = {Machine Learning and Knowledge Discovery in Databases},
+	publisher = {Springer},
+	author = {Lee, Dong-Hyun and Zhang, Saizheng and Fischer, Asja and Bengio, Yoshua},
+	editor = {Appice, Annalisa and Rodrigues, Pedro Pereira and Santos Costa, Vítor and Soares, Carlos and Gama, João and Jorge, Alípio},
+	urldate = {2023-07-04},
+	date = {2015},
+	langid = {english},
+	doi = {10.1007/978-3-319-23528-8_31},
+	note = {Series Title: Lecture Notes in Computer Science},
+}
+
+@book{kelso_dynamic_1999,
+	location = {Cambridge, {MA}, {USA}},
+	edition = {3rd},
+	title = {Dynamic patterns: the self-organization of brain and behavior},
+	isbn = {978-0-262-61131-2},
+	shorttitle = {Dynamic patterns},
+	pagetotal = {334},
+	publisher = {{MIT} Press},
+	author = {Kelso, Scott J. A.},
+	date = {1999},
+	langid = {english},
+}
+
+@collection{dong_deep_2020,
+	location = {Singapore, Republic of Singapore},
+	edition = {1},
+	title = {Deep Reinforcement Learning: Fundamentals, Research and Applications},
+	isbn = {9789811540950},
+	url = {http://link.springer.com/10.1007/978-981-15-4095-0},
+	shorttitle = {Deep Reinforcement Learning},
+	pagetotal = {514},
+	publisher = {Springer Singapore},
+	editor = {Dong, Hao and Ding, Zihan and Zhang, Shanghang},
+	urldate = {2023-06-28},
+	date = {2020},
+	langid = {english},
+	doi = {10.1007/978-981-15-4095-0},
+}
+
+@incollection{cord_supervised_2008,
+	location = {Heidelberg, Germany},
+	title = {Supervised Learning},
+	isbn = {978-3-540-75171-7},
+	url = {http://link.springer.com/10.1007/978-3-540-75171-7_2},
+	pages = {21--49},
+	booktitle = {Machine Learning Techniques for Multimedia},
+	publisher = {Springer},
+	author = {Cunningham, Pádraig and Cord, Matthieu and Delany, Sarah Jane},
+	editor = {Cord, Matthieu and Cunningham, Pádraig},
+	urldate = {2023-06-26},
+	date = {2008},
+	langid = {english},
+	doi = {10.1007/978-3-540-75171-7_2},
+	note = {Series Title: Cognitive Technologies},
+}
+
+@article{fritzke_growing_1994,
+	title = {Growing cell structures: A self-organizing network for unsupervised and supervised learning},
+	volume = {7},
+	issn = {08936080},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/0893608094900914},
+	doi = {10.1016/0893-6080(94)90091-4},
+	pages = {1441--1460},
+	number = {9},
+	journaltitle = {Neural Networks},
+	shortjournal = {Neural Networks},
+	author = {Fritzke, Bernd},
+	urldate = {2023-07-03},
+	date = {1994-01},
+	langid = {english},
+}
+
 @article{liu_self-supervised_2021,
 	title = {Self-supervised Learning: Generative or Contrastive},
 	volume = {35},
@@ -889,23 +986,6 @@ matching state-of-the-art model-free and model-based algorithms on {MuJoCo} cont
 	doi = {10.1515/9781400849383.297},
 }
 
-@incollection{thrun_introduction_1998,
-	location = {Boston, {MA}, {USA}},
-	title = {Introduction and Overview},
-	isbn = {978-1-4613-7527-2 978-1-4615-5529-2},
-	url = {http://link.springer.com/10.1007/978-1-4615-5529-2_1},
-	shorttitle = {Learning to Learn},
-	pages = {3--17},
-	booktitle = {Learning to Learn},
-	publisher = {Springer},
-	author = {Thrun, Sebastian and Pratt, Lorien},
-	editor = {Thrun, Sebastian and Pratt, Lorien},
-	urldate = {2023-07-01},
-	date = {1998},
-	langid = {english},
-	doi = {10.1007/978-1-4615-5529-2_1},
-}
-
 @incollection{eckmiller_spike_1990,
 	location = {New York, {NY}, {USA}},
 	title = {Spike arrival times: A highly efficient coding scheme for neural networks},
@@ -983,24 +1063,6 @@ matching state-of-the-art model-free and model-based algorithms on {MuJoCo} cont
 	note = {Series Title: Lecture Notes in Computer Science},
 }
 
-@incollection{appice_difference_2015,
-	location = {Cham, Switzerland},
-	title = {Difference Target Propagation},
-	volume = {9284},
-	isbn = {978-3-319-23527-1 978-3-319-23528-8},
-	url = {http://link.springer.com/10.1007/978-3-319-23528-8_31},
-	pages = {498--515},
-	booktitle = {Machine Learning and Knowledge Discovery in Databases},
-	publisher = {Springer},
-	author = {Lee, Dong-Hyun and Zhang, Saizheng and Fischer, Asja and Bengio, Yoshua},
-	editor = {Appice, Annalisa and Rodrigues, Pedro Pereira and Santos Costa, Vítor and Soares, Carlos and Gama, João and Jorge, Alípio},
-	urldate = {2023-07-04},
-	date = {2015},
-	langid = {english},
-	doi = {10.1007/978-3-319-23528-8_31},
-	note = {Series Title: Lecture Notes in Computer Science},
-}
-
 @incollection{adamatzky_reservoir_2018,
 	location = {New York, {NY}, {USA}},
 	title = {Reservoir Computing},
@@ -1048,23 +1110,6 @@ matching state-of-the-art model-free and model-based algorithms on {MuJoCo} cont
 	date = {1990},
 	langid = {english},
 	note = {Publisher: Guilford Press},
-}
-
-@incollection{cord_supervised_2008,
-	location = {Heidelberg, Germany},
-	title = {Supervised Learning},
-	isbn = {978-3-540-75170-0 978-3-540-75171-7},
-	url = {http://link.springer.com/10.1007/978-3-540-75171-7_2},
-	pages = {21--49},
-	booktitle = {Machine Learning Techniques for Multimedia},
-	publisher = {Springer},
-	author = {Cunningham, Pádraig and Cord, Matthieu and Delany, Sarah Jane},
-	editor = {Cord, Matthieu and Cunningham, Pádraig},
-	urldate = {2023-06-26},
-	date = {2008},
-	langid = {english},
-	doi = {10.1007/978-3-540-75171-7_2},
-	note = {Series Title: Cognitive Technologies},
 }
 
 @incollection{anderson_biased_1998,
@@ -1258,19 +1303,6 @@ matching state-of-the-art model-free and model-based algorithms on {MuJoCo} cont
 	date = {1992},
 	langid = {english},
 	keywords = {Gestalt psychology},
-}
-
-@book{kelso_dynamic_1999,
-	location = {Cambridge, {MA}, {USA}},
-	edition = {3rd},
-	title = {Dynamic patterns: the self-organization of brain and behavior},
-	isbn = {978-0-262-61131-2 978-0-262-11200-0},
-	shorttitle = {Dynamic patterns},
-	pagetotal = {334},
-	publisher = {{MIT} Press},
-	author = {Kelso, Scott J. A.},
-	date = {1999},
-	langid = {english},
 }
 
 @collection{kandel_principles_2013,
@@ -1780,21 +1812,6 @@ matching state-of-the-art model-free and model-based algorithms on {MuJoCo} cont
 	date = {2021-05-01},
 }
 
-@misc{ramsauer_hopfield_2021,
-	title = {Hopfield Networks is All You Need},
-	url = {http://arxiv.org/abs/2008.02217},
-	doi = {10.48550/arXiv.2008.02217},
-	abstract = {We introduce a modern Hopfield network with continuous states and a corresponding update rule. The new Hopfield network can store exponentially (with the dimension of the associative space) many patterns, retrieves the pattern with one update, and has exponentially small retrieval errors. It has three types of energy minima (fixed points of the update): (1) global fixed point averaging over all patterns, (2) metastable states averaging over a subset of patterns, and (3) fixed points which store a single pattern. The new update rule is equivalent to the attention mechanism used in transformers. This equivalence enables a characterization of the heads of transformer models. These heads perform in the first layers preferably global averaging and in higher layers partial averaging via metastable states. The new modern Hopfield network can be integrated into deep learning architectures as layers to allow the storage of and access to raw input data, intermediate results, or learned prototypes. These Hopfield layers enable new ways of deep learning, beyond fully-connected, convolutional, or recurrent networks, and provide pooling, memory, association, and attention mechanisms. We demonstrate the broad applicability of the Hopfield layers across various domains. Hopfield layers improved state-of-the-art on three out of four considered multiple instance learning problems as well as on immune repertoire classification with several hundreds of thousands of instances. On the {UCI} benchmark collections of small classification tasks, where deep learning methods typically struggle, Hopfield layers yielded a new state-of-the-art when compared to different machine learning methods. Finally, Hopfield layers achieved state-of-the-art on two drug design datasets. The implementation is available at: https://github.com/ml-jku/hopfield-layers},
-	number = {{arXiv}:2008.02217},
-	publisher = {{arXiv}},
-	author = {Ramsauer, Hubert and Schäfl, Bernhard and Lehner, Johannes and Seidl, Philipp and Widrich, Michael and Adler, Thomas and Gruber, Lukas and Holzleitner, Markus and Pavlović, Milena and Sandve, Geir Kjetil and Greiff, Victor and Kreil, David and Kopp, Michael and Klambauer, Günter and Brandstetter, Johannes and Hochreiter, Sepp},
-	urldate = {2023-07-24},
-	date = {2021-04-28},
-	eprinttype = {arxiv},
-	eprint = {2008.02217 [cs, stat]},
-	keywords = {Computer Science - Computation and Language, Computer Science - Machine Learning, Computer Science - Neural and Evolutionary Computing, Statistics - Machine Learning},
-}
-
 @article{anderson_shifter_1987,
 	title = {Shifter circuits: a computational strategy for dynamic aspects of visual processing.},
 	volume = {84},
@@ -2241,22 +2258,6 @@ matching state-of-the-art model-free and model-based algorithms on {MuJoCo} cont
 	langid = {english},
 }
 
-@collection{dong_deep_2020,
-	location = {Singapore, Republic of Singapore},
-	edition = {1},
-	title = {Deep Reinforcement Learning: Fundamentals, Research and Applications},
-	isbn = {9789811540943 9789811540950},
-	url = {http://link.springer.com/10.1007/978-981-15-4095-0},
-	shorttitle = {Deep Reinforcement Learning},
-	pagetotal = {514},
-	publisher = {Springer Singapore},
-	editor = {Dong, Hao and Ding, Zihan and Zhang, Shanghang},
-	urldate = {2023-06-28},
-	date = {2020},
-	langid = {english},
-	doi = {10.1007/978-981-15-4095-0},
-}
-
 @article{grill-spector_human_2004,
 	title = {The human visual cortex},
 	volume = {27},
@@ -2433,22 +2434,6 @@ matching state-of-the-art model-free and model-based algorithms on {MuJoCo} cont
 	author = {Wiskott, Laurenz and Fellous, Jean-Marc and Kuiger, Norbert and von der Malsburg, Christoph},
 	urldate = {2023-06-14},
 	date = {1997-07},
-}
-
-@article{wolfrum_recurrent_2008,
-	title = {A recurrent dynamic model for correspondence-based face recognition},
-	volume = {8},
-	issn = {1534-7362},
-	url = {http://jov.arvojournals.org/article.aspx?doi=10.1167/8.7.34},
-	doi = {10.1167/8.7.34},
-	pages = {34},
-	number = {7},
-	journaltitle = {Journal of Vision},
-	shortjournal = {Journal of Vision},
-	author = {Wolfrum, Philipp and Wolff, Christian and Lücke, Jörg and von der Malsburg, Christoph},
-	urldate = {2023-07-03},
-	date = {2008-12-29},
-	langid = {english},
 }
 
 @article{von_der_malsburg_neural_1987,
@@ -2752,44 +2737,6 @@ matching state-of-the-art model-free and model-based algorithms on {MuJoCo} cont
 	author = {Payeur, Alexandre and Guerguiev, Jordan and Zenke, Friedemann and Richards, Blake A. and Naud, Richard},
 	urldate = {2023-07-07},
 	date = {2021-07},
-	langid = {english},
-}
-
-@article{vogels_inhibitory_2011,
-	title = {Inhibitory Plasticity Balances Excitation and Inhibition in Sensory Pathways and Memory Networks},
-	volume = {334},
-	issn = {0036-8075, 1095-9203},
-	url = {https://www.science.org/doi/10.1126/science.1211095},
-	doi = {10.1126/science.1211095},
-	abstract = {Plasticity at inhibitory synapses maintains balanced excitatory and inhibitory synaptic inputs at cortical neurons.
-          , 
-            Cortical neurons receive balanced excitatory and inhibitory synaptic currents. Such a balance could be established and maintained in an experience-dependent manner by synaptic plasticity at inhibitory synapses. We show that this mechanism provides an explanation for the sparse firing patterns observed in response to natural stimuli and fits well with a recently observed interaction of excitatory and inhibitory receptive field plasticity. The introduction of inhibitory plasticity in suitable recurrent networks provides a homeostatic mechanism that leads to asynchronous irregular network states. Further, it can accommodate synaptic memories with activity patterns that become indiscernible from the background state but can be reactivated by external stimuli. Our results suggest an essential role of inhibitory plasticity in the formation and maintenance of functional cortical circuitry.},
-	pages = {1569--1573},
-	number = {6062},
-	journaltitle = {Science},
-	shortjournal = {Science},
-	author = {Vogels, T. P. and Sprekeler, H. and Zenke, F. and Clopath, C. and Gerstner, W.},
-	urldate = {2023-07-07},
-	date = {2011-12-16},
-	langid = {english},
-}
-
-@article{vogels_inhibitory_2011-1,
-	title = {Inhibitory Plasticity Balances Excitation and Inhibition in Sensory Pathways and Memory Networks},
-	volume = {334},
-	issn = {0036-8075, 1095-9203},
-	url = {https://www.science.org/doi/10.1126/science.1211095},
-	doi = {10.1126/science.1211095},
-	abstract = {Plasticity at inhibitory synapses maintains balanced excitatory and inhibitory synaptic inputs at cortical neurons.
-          , 
-            Cortical neurons receive balanced excitatory and inhibitory synaptic currents. Such a balance could be established and maintained in an experience-dependent manner by synaptic plasticity at inhibitory synapses. We show that this mechanism provides an explanation for the sparse firing patterns observed in response to natural stimuli and fits well with a recently observed interaction of excitatory and inhibitory receptive field plasticity. The introduction of inhibitory plasticity in suitable recurrent networks provides a homeostatic mechanism that leads to asynchronous irregular network states. Further, it can accommodate synaptic memories with activity patterns that become indiscernible from the background state but can be reactivated by external stimuli. Our results suggest an essential role of inhibitory plasticity in the formation and maintenance of functional cortical circuitry.},
-	pages = {1569--1573},
-	number = {6062},
-	journaltitle = {Science},
-	shortjournal = {Science},
-	author = {Vogels, T. P. and Sprekeler, H. and Zenke, F. and Clopath, C. and Gerstner, W.},
-	urldate = {2023-07-07},
-	date = {2011-12-16},
 	langid = {english},
 }
 
@@ -3164,22 +3111,6 @@ matching state-of-the-art model-free and model-based algorithms on {MuJoCo} cont
 	author = {Marsland, Stephen and Shapiro, Jonathan and Nehmzow, Ulrich},
 	urldate = {2023-07-03},
 	date = {2002-10},
-	langid = {english},
-}
-
-@article{fritzke_growing_1994,
-	title = {Growing cell structures—A self-organizing network for unsupervised and supervised learning},
-	volume = {7},
-	issn = {08936080},
-	url = {https://linkinghub.elsevier.com/retrieve/pii/0893608094900914},
-	doi = {10.1016/0893-6080(94)90091-4},
-	pages = {1441--1460},
-	number = {9},
-	journaltitle = {Neural Networks},
-	shortjournal = {Neural Networks},
-	author = {Fritzke, Bernd},
-	urldate = {2023-07-03},
-	date = {1994-01},
 	langid = {english},
 }
 
@@ -4263,23 +4194,6 @@ matching state-of-the-art model-free and model-based algorithms on {MuJoCo} cont
 	date = {1989-12},
 }
 
-@article{hopfield_neural_1982,
-	title = {Neural networks and physical systems with emergent collective computational abilities.},
-	volume = {79},
-	issn = {0027-8424, 1091-6490},
-	url = {https://pnas.org/doi/full/10.1073/pnas.79.8.2554},
-	doi = {10.1073/pnas.79.8.2554},
-	abstract = {Computational properties of use of biological organisms or to the construction of computers can emerge as collective properties of systems having a large number of simple equivalent components (or neurons). The physical meaning of content-addressable memory is described by an appropriate phase space flow of the state of a system. A model of such a system is given, based on aspects of neurobiology but readily adapted to integrated circuits. The collective properties of this model produce a content-addressable memory which correctly yields an entire memory from any subpart of sufficient size. The algorithm for the time evolution of the state of the system is based on asynchronous parallel processing. Additional emergent collective properties include some capacity for generalization, familiarity recognition, categorization, error correction, and time sequence retention. The collective properties are only weakly sensitive to details of the modeling or the failure of individual devices.},
-	pages = {2554--2558},
-	number = {8},
-	journaltitle = {Proceedings of the National Academy of Sciences},
-	shortjournal = {Proc. Natl. Acad. Sci. U.S.A.},
-	author = {Hopfield, John J.},
-	urldate = {2023-06-29},
-	date = {1982-04},
-	langid = {english},
-}
-
 @article{vogels_inhibitory_2011,
 	title = {Inhibitory Plasticity Balances Excitation and Inhibition in Sensory Pathways and Memory Networks},
 	volume = {334},
@@ -4924,24 +4838,6 @@ matching state-of-the-art model-free and model-based algorithms on {MuJoCo} cont
 	eprinttype = {arxiv},
 	eprint = {2205.00002 [cs, q-bio]},
 	keywords = {Computer Science - Artificial Intelligence, I.2, Quantitative Biology - Neurons and Cognition},
-}
-
-@article{sager_unsupervised_2022,
-	title = {Unsupervised Domain Adaptation for Vertebrae Detection and Identification in 3D {CT} Volumes Using a Domain Sanity Loss},
-	volume = {8},
-	rights = {All rights reserved},
-	issn = {2313-433X},
-	url = {https://www.mdpi.com/2313-433X/8/8/222},
-	doi = {10.3390/jimaging8080222},
-	abstract = {A variety of medical computer vision applications analyze 2D slices of computed tomography ({CT}) scans, whereas axial slices from the body trunk region are usually identified based on their relative position to the spine. A limitation of such systems is that either the correct slices must be extracted manually or labels of the vertebrae are required for each {CT} scan to develop an automated extraction system. In this paper, we propose an unsupervised domain adaptation ({UDA}) approach for vertebrae detection and identification based on a novel Domain Sanity Loss ({DSL}) function. With {UDA} the model’s knowledge learned on a publicly available (source) data set can be transferred to the target domain without using target labels, where the target domain is defined by the specific setup ({CT} modality, study protocols, applied pre- and processing) at the point of use (e.g., a specific clinic with its specific {CT} study protocols). With our approach, a model is trained on the source and target data set in parallel. The model optimizes a supervised loss for labeled samples from the source domain and the {DSL} loss function based on domain-specific “sanity checks” for samples from the unlabeled target domain. Without using labels from the target domain, we are able to identify vertebra centroids with an accuracy of 72.8\%. By adding only ten target labels during training the accuracy increases to 89.2\%, which is on par with the current state-of-the-art for full supervised learning, while using about 20 times less labels. Thus, our model can be used to extract 2D slices from 3D {CT} scans on arbitrary data sets fully automatically without requiring an extensive labeling effort, contributing to the clinical adoption of medical imaging by hospitals.},
-	pages = {222},
-	number = {8},
-	journaltitle = {Journal of Imaging},
-	shortjournal = {J. Imaging},
-	author = {Sager, Pascal and Salzmann, Sebastian and Burn, Felice and Stadelmann, Thilo},
-	urldate = {2022-09-01},
-	date = {2022-08-19},
-	langid = {english},
 }
 
 @article{long_survey_2022,
