--- a/tex/prequote.tex
+++ b/tex/prequote.tex
@@ -1,4 +1,4 @@
-\begin{prequote}[20pt]{Geoffrey Hinton, University of Toronto, 2017.}
+\begin{prequote}[20pt]{Geoffrey E. Hinton, University of Toronto, 2017.}
     ``Max Planck said, 'Science progresses one funeral at a time.'\\
     The future depends on some graduate student who is deeply\\
     suspicious of everything I have said.''\\
